syntax = "proto3";
package elysnetwork.elys.tokenomics;

import "elys/tokenomics/inflation_entry.proto"; 

option go_package = "github.com/elys-network/elys/x/tokenomics/types";

message TimeBasedInflation {
  uint64 startBlockHeight = 1; 
  uint64 endBlockHeight = 2; 
  string description = 3; 
  InflationEntry inflation = 4; 
  string authority = 5;
}

